Additional modification to fix phone number being highlighted on safari

--- a/css/pages/contact.css
+++ b/css/pages/contact.css
@@ -28,6 +28,8 @@
     padding-bottom: 30px;
     color: rgba(0, 0, 0, .7);
     font-family: 'Raleway', sans-serif;
+    pointer-events: none;
+    text-decoration:none; color:inherit;
 }
 
 .contact-item-icon {
